# file_alphabetizer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  test
tests/: unit_tests.rs
